[project]
name = "url-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    "dm-control>=1.0.23",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "imageio>=2.35.1",
    "matplotlib>=3.7.5",
    "moviepy>=1.0.3",
    "mujoco-py>=2.1.2.14",
    "numpy>=1.24.4",
    "opencv-python>=4.12.0.88",
    "pandas>=2.0.3",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.2",
    "tensorboard>=2.14.0",
    "termcolor>=2.4.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "wandb>=0.23.0",
]
